--- a/index.html
+++ b/index.html
@@ -1,17 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-<<<<<<< HEAD
 	<title>test</title>
 </head>
 <body>
 <h1>home</h1>
 <h1>heloo</h1>
-=======
-	<title></title>
 </head>
 <body>
 <p>hopefully is work in the end</p>
->>>>>>> about
+<p>wellcome to ksa</p>
 </body>
 </html>
